# models/status.go
@@ -1,0 +1,6 @@
+package models
+
+//Status object to return status of request
+type Status struct {
+	Successful bool
+}
